# aurion-nexus

./: .env.example  .gitignore  .pre-commit-config.yaml  CHRONICLE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  PULSE.md  README.md  RULES.md  SOUL.md  docker-compose.yml  pyproject.toml
.agent/: skills-manifest.md
.agent/docs/: AGENTS.md  AURION.md  CHRONICLE.md  PROGRESS.md  RULES.md
.agent/hooks/: post-session-learning.sh  pre-execution-scan.sh
.agent/knowledge/: advanced-platform-ai-catalog.md  architectural-reference-catalog.md  engineering-and-product-reference-catalog.md  platform-infrastructure-catalog.md
.agent/knowledge/insights/: 20260419-0231-estratégias-de-redução-de-tokens-em-multi-agentes.md
.agent/skills/: router.md
.agent/skills/aurion/: adr-protocol.md  chief-of-staff.md  communication-standards.md  consensus-building.md  deep-interview.md  design-excellence.md  design-strategy.md  development-manual.md  development-standards.md  high-complexity-guide.md  ideation-guide.md  memory-librarian.md  operation-guide.md  paperclip-cycle.md  refinement-workflow.md  seip-strategic-guide.md
.agent/skills/aurora/: investigator.md  mission-protocol.md  tdd-workflow.md
.agent/templates/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.obsidian/: graph.json  workspace.json
infrastructure/wikimind-core/: vulture_whitelist.py
infrastructure/wikimind-core/alembic/: env.py
scripts/: audit_wikilinks.py  nexus-investigator.py  nexus_trace.py  setup-skills.sh
tests/: test_slugify.py
(+70 files in other folders)
