[project]
name = "aurion-nexus-core"
version = "0.1.0"
description = "Sovereign AI Agent Orchestration Framework"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.4.0",
    "python-slugify>=8.0.4",
    "playwright>=1.49.0",
    "keyring>=25.4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.9",
    "mypy>=1.12.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "detect-secrets>=1.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=. --cov-report=term-missing"
